--- a/cfg/apply_force.yaml
+++ b/cfg/apply_force.yaml
@@ -38,3 +38,25 @@ block:
     rolling_friction: 0
     torsion_friction: 0
     thickness: 2e-3
+
+franka:
+  attractor_props:
+    stiffness: 1e3
+    damping: 2.5e2
+  asset_options:
+    fix_base_link: True
+    flip_visual_attachments: True
+    armature: 0.01
+    max_linear_velocity: 100.0
+    max_angular_velocity: 40.0
+    disable_gravity: True
+  attractor_props:
+    stiffness: 1e3
+    damping: 2e2
+  shape_props:
+    thickness: 1e-3
+  dof_props:
+    # stiffness: [2e3, 2e3, 2e3, 2e3, 2e3, 2e3, 2e3, 1e2, 1e2]
+    stiffness: [0, 0, 0, 0, 0, 0, 0, 0, 0]
+    damping: [2e2, 2e2, 2e2, 2e2, 2e2, 2e2, 2e2, 5, 5]
+    effort: [87, 87, 87, 87, 12, 12, 12, 100, 100]
