--- a/cfg/franka_pick_block.yaml
+++ b/cfg/franka_pick_block.yaml
@@ -1,5 +1,5 @@
 scene:
-  n_envs: 10
+  n_envs: 1
   es: 1
   gui: 1
   cam:
@@ -52,6 +52,22 @@ table:
     thickness: 2e-3
   asset_options:
     fix_base_link: True
+
+wall:
+  dims:
+    sx: 0.05
+    sy: 0.2
+    sz: 0.3
+  shape_props:
+    friction: 0.2
+    rolling_friction: 0.01
+    torsion_friction: 0.01
+    thickness: 2e-3
+  rb_props:
+    flags: none # can be none, no_sim, no_gravity
+    color: [0.7, 0.2, 0.2]
+  asset_options:
+    density: 1000
 
 block:
   dims:
