--- a/cfg/franka_tree_force.yaml
+++ b/cfg/franka_tree_force.yaml
@@ -61,9 +61,9 @@ tree:
   shape_props:
     thickness: 1e-3
   dof_props:
-    stiffness: [30,30,30, 30, 30,  30, 30, 30, 30]
-    damping: [2e1,2e1,2e1, 2e1,2e1,  2e1,2e1, 2e1,2e1]
-    effort: [87, 87, 87, 87, 87, 87, 87, 87, 87]
+    stiffness: [2e3, 2e3,  2e3, 2e3, 2e3,  2e3, 2e3, 2e3,  2e3, 2e3, 2e3,  2e3,2e3, 2e3,  2e3,2e3, 2e3,  2e3,2e3, 2e3,  2e3,2e3, 2e3,  2e3,2e3, 2e3]
+    damping: [2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2,  2e2, 2e2, 2e2]
+    effort: [87, 87, 87,87, 87, 87,87, 87, 87,87, 87, 87,87, 87, 87,87, 87, 87,87, 87, 87,87, 87, 87,87, 87]
 
 block:
   dims:
