--- a/cfg/franka_pick_block.yaml
+++ b/cfg/franka_pick_block.yaml
@@ -56,8 +56,8 @@ table:
 wall:
   dims:
     sx: 0.05
-    sy: 0.2
-    sz: 0.3
+    sy: 0.1
+    sz: 0.2
   shape_props:
     friction: 0.2
     rolling_friction: 0.01
@@ -80,7 +80,7 @@ block:
     torsion_friction: 0.01
     thickness: 2e-3
   rb_props:
-    flags: none # can be none, no_sim, no_gravity
+    flags: no_gravity
     color: [0.2, 0.7, 0.2]
   asset_options:
     density: 1000
